Push Complete Application

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,9 @@
 }
 
 body {
-  background: var(--background);
+  background: url('../../public/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
